# monkey

./: README.md  pyproject.toml
src/monkey/: __main__.py  ast.py  builtins.py  cli.py  environment.py  evaluator.py  lexer.py  main.py  mobj.py  parser.py  repl.py  token.py
tests/: test_ast.py  test_evaluator.py  test_lexer.py  test_mobj.py  test_parser.py
