[tool.poetry]
name = "python-monkey"
version = "0.1.0"
description = ""
authors = ["Niko Pietikäinen <niko.pietikainen@protonmail.com>"]
readme = "README.md"
packages = [{include = "monkey", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
pytest = "^7.3.1"

[tool.poetry.scripts]
monkey = "monkey.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
